[project]
name = "prospect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "networkx>=3.6.1",
    "probabilit>=0.4.2",
    "pyagrum>=2.3.2",
    "seaborn>=0.13.2",
    "sympy>=1.14.0",
]
